# transformer-from-scratch

./: .gitignore  BUILD_CUDA.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CUDA_STATUS.md  Makefile  OVERFLOW_ANALYSIS.md  README.md  cmake_install.cmake  test_attention_bias  test_attention_gradients  test_cuda_basic.cpp  test_dropout  test_gradients  test_matmul.cpp  test_weight_tying  tokenizer_500.cache  tokenizer_5000.cache  transformer
build-fast/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  transformer
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_attention_bias  test_dropout  test_gradients  test_weight_tying
docs/: COMMANDS.md
include/data/: dataloader.h  dataset.h
include/tokenizer/: bpe_tokenizer.h
include/training/: trainer.h
include/transformer/: activations.h  attention.h  blas_wrapper.h  feedforward.h  gpt_model.h  layer_norm.h  linear.h  module.h  multihead_attention.h  optimizer.h  positional_encoding.h  storage.h  tensor.h  text_gen.h  token_embedding.h  transformer_block.h  variable.h
include/utils/: metrics.h  training_utils.h
src/: attention.cpp  attention.h  feedforward.cpp  feedforward.h  gpt_model.cpp  layer_norm.cpp  linear.cpp  main.cpp  multihead_attention.cpp  positional_encoding.cpp  tensor.cpp  tensor.h  token_embedding.cpp  transformer_block.cpp  transformer_block.h
src/data/: dataloader.cpp  dataset.cpp
src/tokenizer/: bpe_tokenizer.cpp
src/training/: trainer.cpp
src/transformer/: Tensor.cu  activations.cpp  attention.cpp  feedforward.cpp  gpt_model.cpp  layer_norm.cpp  linear.cpp  multihead_attention.cpp  optimizer.cpp  positional_encoding.cpp  tensor.cpp  text_gen.cpp  token_embedding.cpp  transformer_block.cpp  variable.cpp
src/utils/: metrics.cpp  training_utils.cpp
tests/integration/: sanity_tests.cpp
tests/unit/: test_attention_bias.cpp  test_attention_gradients.cpp  test_dropout.cpp  test_gradients.cpp  test_subtract.cpp  test_weight_tying.cpp
